fixed vertical alignment for newsletter and fb share button

--- a/src/styles/Admin.css
+++ b/src/styles/Admin.css
@@ -211,3 +211,11 @@
     font-size: 15px;
     border: 0 solid #000000;
 }
+
+.send-article-section {
+    display: flex;
+    padding-left: 100px;
+    padding-right: 100px;
+    flex-direction: column;
+    gap: 20px;
+}
